trying to fix multi photo styling on mobile portrait devices

--- a/photo/multi-photo-styles.css
+++ b/photo/multi-photo-styles.css
@@ -19,3 +19,10 @@ body {
     max-height: 33.5vw;
   }
 }
+
+@media (max-aspect-ratio: 3/4) {
+  .photo {
+    max-width: 80vw;
+    max-height: 85vh;
+  }
+}
